--- a/_config.yml
+++ b/_config.yml
@@ -85,7 +85,7 @@ author:
 #  name             : "Chenyu Zhu"
   avatar           : "profile.png"
 #  bio              : "Your biography for the left-hand sidebar"
-  location         : "Qingdao,CHINA"
+  location         : "CHINA"
   employer         :
 #  pubmed           : "https://www.ncbi.nlm.nih.gov/pubmed/?term=john+snow"
   googlescholar    : "https://scholar.google.com/citations?user=_1F4U18AAAAJ&hl=en"
