--- a/_config.yml
+++ b/_config.yml
@@ -13,7 +13,7 @@ name                     : &name "Chenyu Zhu"
 description              : &description "personal description"
 # url                      : https://academicpages.github.io # the base hostname & protocol for your site e.g. "https://mmistakes.github.io"
 url                      : https://zhuouc.github.io
-baseurl                  : "" # the subpath of your site, e.g. "/blog"
+baseurl                  : "/master" # the subpath of your site, e.g. "/blog"
 # repository               : "academicpages/academicpages.github.io"
 repository               : "zhuouc/zhuouc.github.io"
 teaser                   :  # filename of teaser fallback teaser image placed in /images/, .e.g. "500x300.png"
