--- a/_config.yml
+++ b/_config.yml
@@ -232,7 +232,7 @@ defaults:
   # _research
   - scope:
       path: ""
-      type: portfolio
+      type: research
     values:
       layout: single
       author_profile: true
