--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -1,19 +1,17 @@
 # main links links
 main:
-  - title: "Publications"
-    url: /publications/
-
-  - title: "Talks"
-    url: /talks/    
-
-  - title: "Teaching"
-    url: /teaching/    
-    
-  - title: "Portfolio"
-    url: /portfolio/
         
-  - title: "Blog Posts"
-    url: /year-archive/
+  - title: "Group"
+    url: /group/
+    
+  - title: "Research"
+    url: /research/
+    
+   - title: "Teaching"
+    url: /teaching/ 
+    
+  - title: "Publications"
+    url: /publications/     
     
   - title: "CV"
     url: /cv/
