--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -10,8 +10,8 @@ main:
   - title: "Teaching"
     url: /teaching/ 
     
-  #- title: "Publications"
-  #  url: /publications/     
+  - title: "Publications"
+    url: /publications/     
     
   - title: "CV"
     url: /cv/
