--- a/_config.yml
+++ b/_config.yml
@@ -7,7 +7,7 @@
 
 # Site Settings
 locale                   : "en-US"
-title                    : "Chenyu Zhu"
+title                    : "Chenyu Zhu(朱晨玉)"
 title_separator          : "-"
 name                     : &name "Chenyu Zhu"
 description              : &description "personal description"
